Moved all JS and CSS files from Code Sandbox to VS Code

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .container {
+  width: 500px;
+  height: 1100px;
+  border-radius: 5px;
+  background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App .search-input {
+  margin-top: 10px;
+  border-radius: 8px;
+  width: 280px;
+  position: relative;
+  left: -30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .search-button {
+  position: relative;
+  left: -25px;
+  border-radius: 10px;
+  background: transparent;
+  color: #fff;
+  transition: ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.App .search-button:hover {
+  color: #fff;
+  background: #b33b64;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .forecast-title {
+  font-size: 30px;
+}
+
+.App .fahrenheit {
+  position: relative;
+  right: -30px;
+  border-radius: 10px;
+  background: transparent;
+  color: #fff;
+  transition: ease-in-out;
+}
+
+.App .fahrenheit:hover {
+  color: #fff;
+  background: #b33b64;
+}
+
+.App .celsius {
+  position: relative;
+  right: -33px;
+  border-radius: 10px;
+  background: transparent;
+  color: #fff;
+  transition: ease-in-out;
+}
+
+.App .celsius:hover {
+  color: #fff;
+  background: #b33b64;
 }
