--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -24,10 +24,10 @@
 
 .Forecast .forecast-icon {
   position: relative;
-  top: -20px;
+  top: -21px;
   left: 150px;
-  background-color: rgba(255, 255, 255, 0.4);
-  border: 2px solid #473a93;
+  background-color: rgba(5, 4, 4, 0.5);
+  border: 2px solid #000;
   border-radius: 50px;
   width: 50px;
   height: 50px;
